SolarLint: updated transactionService